--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <p>This is the new local reositry</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit distinctio animi deserunt!</p>
